--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea/*
 /server/build/*
 /server/.idea/*
+/apache-tomcat-8.0.33/apache-tomcat-8.0.33/bin/log/*
+/apache-tomcat-8.0.33/apache-tomcat-8.0.33/webapps/*
 *.iml
 *.war
 *.war
